# night-kitchen

./: Cargo.toml  README.md  generate_bindings.sh
.github/workflows/: ci.yml  package.yml  release.yml
common/: Cargo.toml  generate_bindings.sh
common/src/: lib.rs  power_monitor.rs  session.rs  systemd1.rs
logind/: Cargo.toml  generate_bindings.sh
logind/src/: bindings.rs  lib.rs
packaging/arch/: PKGBUILD
runner/: Cargo.toml
runner/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: main.rs
scripts/: generate_bindings.sh  release.sh
src/: dbus.rs  lib.rs
src/dbus/: logind.rs  systemd.rs  systemd_timer.rs
systemd/: night-kitchen-daily.service  night-kitchen-daily.target  night-kitchen-daily.timer  night-kitchen-scheduler.service  night-kitchen-weekly.service  night-kitchen-weekly.target  night-kitchen-weekly.timer
