[package]
name = "night-kitchen-common"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dbus = "0.8"
itertools = "0.8"
libc = "0.2"
slog = "2.5"
slog-async = "2.4"
slog-journald = "2.1"
slog-term = "2.5"