[package]
name = "night-kitchen-scheduler"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
night-kitchen-common = { path = "../common" }
slog = "2.5"
